fixes join icon spacing

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -2029,6 +2029,7 @@ aside { }
 
         aside .messaging-block--ask .dollar-heart-svg {
             margin-right: -.35em;
+            margin-left: -.25em;
         }
 
     .messaging-zone .messaging-block {
